# numerical-probability-project

./: README.md  test.txt  进程整理.docx  进程整理.pages
codes/: CalculVarCvar.cpp  CalculVarCvar.hpp  LoiExpon.cpp  LoiExpon.hpp  LoiGamma.cpp  LoiGamma.hpp  LoiGauss.cpp  LoiGauss.hpp  Makefile  README.txt  algo.cpp  algo.hpp  main.cpp  test.cpp  test_py.ipynb
codes/.ipynb_checkpoints/: test_py-checkpoint.ipynb
codes/test cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
codes/test cmake/lib/: CMakeLists.txt  LoiGamma.hpp  LoiGauss.cpp  Makefile  algo.cpp  algo.hpp  cmake_install.cmake
codes/test cmake/src/: test_algo_naive.cpp
rapport/: raprot_du_projet.aux  raprot_du_projet.out  raprot_du_projet.tex  raprot_du_projet.toc  raprot_du_projet2.aux
